2079 [MKV Demuxer] adjusted demuxer to the recent mkvextract changes (requires mkvmerge revision 5.2.1+)
2078 [Progress Window] changed priority will be kept during the whole application session. Feature request #3445179
2077 [Progress Window] lower also I/O and memory priority when priority below normal (requires Windows Vista or newer). Feature request #3468249
2076 [Video Player] fixed a crash when using non seekable scripts
                    in order to display such scripts the default start position is now the beginning 
2075 [AVS Script Creator] improve input DAR detection when using no index files
2074 [AVS Script Creator] + [OneClick] improve input DAR detection when using index files
2073 [Settings] added option to select if ITU Aspect Ratio should be used by default (enabled by default). Feature request #3057378
2072 [Audio Encoder] added handling of channel count mismatch
2071 [MediaInfo] added default/forced track info to the MediaInfo wrapper (requires mediainfo revision 0.7.51+)
2070 [MKV Muxer] adjusted muxer to the recent mkvmerge changes (requires mkvmerge revision 5.2.0+)
2069 [HD Streams Extractor] automatically execute the job a second time if a gaps file is detected
2068 [x264] fixed "--range pc"
2067 [x264] fixed (increased) maximum value of --ref and --bframes when using target playback devices
2066 [x264] replaced --fullrange with --range (requires x264 revision 2119+)
2065 [Adaptive Muxer] fixed handling of delay value and default/forced track. Bug #3443721
2064 [MainForm] MeGUI can only be closed if there are no running jobs
2063 [D2V Indexer] .bad and .fix.txt files will also be deleted in cleanup step
2062 [VobSubber] cosmetics
2061 [x264] fixed wrong --sar values when using BluRay Target Device with 720x576
2060 [AVS Script Creator] enhanced selection box if opening an indexable file directly
2059 [OneClick] + [Update] log categories will not be created anymore if already available
2058 [MKV Muxer] improved idx subtitle handling